update POM.xml