@@ -28,6 +28,7 @@
                         <compilerArgs>
                             <arg>--add-opens</arg>
                             <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                            <arg>--add-exports=java.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -161,6 +162,7 @@
             <artifactId>log4j-api</artifactId>
             <version>2.17.2</version>
         </dependency>
+
 
     </dependencies>
 
